--- a/css/app.css
+++ b/css/app.css
@@ -55,10 +55,19 @@
 
 /*! ------------- 4- INSTRUCTORS -------------*/
 
+section#instructors .card {
+  transition: transform 0.3s;
+  cursor: pointer;
+}
+section#instructors .card:hover {
+  transform: scale(1.03);
+}
+section#instructors i {
+  transition: opacity 0.6s;
+}
+section#instructors i:hover {
+  opacity: 0.5;
+}
 /*! ----------- 4- STUDENTS SECTION ----------*/
 
 /*! ----------- 5- COURSES SECTION ----------- */
-
-/*! ----------- 6- CONTACT SECTION ------------ */
-
-/*! --------------- 7- FOOTER ----------------- */
